포폴사이트 수정

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
         /*푸터구역*/
         #footer {padding-top: 54px; padding-bottom: 31px; background-color: ghostwhite;
                  width: 100%; text-align: center; position: relative; overflow: hidden;}
-        /*감사합니다 글*/
+        /*감사합니다 글영역*/
         #footer h2 {font-size: 30px;
                     margin-bottom: 31px;
                     color: lightslategray;}
